<resources>
    <string name="app_name" translatable="false">d2rTZ-fgservice</string>
    <string name="start_foreground_service" translatable="false">Start App</string>
    <string name="stop_foreground_service" translatable="false">Stop App</string>

    <string name="actualizar">Actualizar</string>
    <string name="terror_zones" translatable="false">TERROR ZONES</string>
    <string name="show_list">Seleccionar zonas OP</string>
    <string name="close_list">Cerrar</string>
    <string name="borrar_lista">Borrar</string>
    <string name="seleccionar_todas">Todas</string>
    <string name="deseleccionar_todas">Ninguna</string>
    <string name="minuto_0_59" translatable="false">%1$d-59</string>
    <string name="minuto_0_29" translatable="false">%1$d-29</string>
    <string name="minuto_30_59" translatable="false">%1$d-59</string>
    <string name="set_alarm">ALARMA 1</string>
    <string name="set_alarm2">ALARMA 2</string>
    <string name="set_noti" translatable="false">NOTIF</string>
    <string name="version_app_info" translatable="false">App version info</string>
    <string name="show_history" translatable="false">H</string>
    <string name="closeDB">Cerrar</string>
    <string name="borrarDB">Borrar DB</string>
    <string name="mute_app" translatable="false">Mute app</string>
    <string name="hora_init">Hora inicial</string>
    <string name="hora_fin">Hora final</string>
    <string name="use_best_zones">Usar Best Zones</string>
    <string name="mute" translatable="false">Mute</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="mute_button" translatable="false">M</string>
    <string name="select_best_zones">Seleccionar Best Zones</string>
</resources>