<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/startstop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="1dp"
        tools:ignore="MissingConstraints">

        <!-- Start Service -->
        <Button
            android:id="@+id/btnStartService"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/green"
            android:textColor="#FFFFFF"
            android:text="@string/start_foreground_service" />

        <!-- Stop Service -->
        <Button
            android:id="@+id/btnStopService"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/redStop"
            android:textColor="#FFFFFF"
            android:text="@string/stop_foreground_service"/>

    </LinearLayout>

    <!-- LinearLayout for config -->
    <LinearLayout
        android:id="@+id/config"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/startstop"
        android:layout_marginTop="1dp"
        android:layout_centerHorizontal="true">

        <!-- Set Alarm Button -->
        <Button
            android:id="@+id/setAlarmButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set_alarm" />

        <EditText
            android:id="@+id/minuteInput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/minuto_0_59"
            android:maxLength="2"
            android:background="@color/mode_secondary"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:minWidth="48dp"
            android:gravity="center"/>

        <!-- Set Notif Button -->
        <Button
            android:id="@+id/setNotifButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set_noti" />

        <EditText
            android:id="@+id/minuteNotifInput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/minuto_0_59"
            android:maxLength="2"
            android:background="@color/mode_secondary"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:minWidth="48dp"
            android:gravity="center"/>
    </LinearLayout>

    <!-- Info Button -->
    <ImageButton
        android:id="@+id/infoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_info"
        android:layout_below="@id/config"
        android:contentDescription="@string/version_app_info"
        android:background="@drawable/custom_button_background"
        android:layout_margin="8dp" />

    <!-- Update Button -->
    <ImageButton
        android:id="@+id/idActualizar"
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/config"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="0dp"
        android:layout_toEndOf="@id/idTZHeading"
        android:background="@drawable/custom_button_background"
        android:contentDescription="@string/actualizar"
        android:src="@drawable/ic_update" />
<!--        android:layout_marginVertical="8dp"-->
<!--        android:layout_marginStart="48dp"/>-->

    <!-- Heading TextView -->
    <TextView
        android:id="@+id/idTZHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/config"
        android:layout_marginTop="16dp"
        android:text="@string/terror_zones"
        android:textAlignment="center"
        android:textColor="@color/mode_secondary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Current TextView -->
    <TextView
        android:id="@+id/idTZCurrent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/idTZHeading"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <!-- Next TextView -->
    <TextView
        android:id="@+id/idTZNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/idTZCurrent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <!-- Show List Button -->
    <Button
        android:id="@+id/showListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/idTZNext"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/show_list" />

    <!-- Show History Button -->
    <Button
        android:id="@+id/btnShowHistory"
        android:layout_width="44dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/idTZNext"
        android:layout_marginTop="0dp"
        android:text="@string/show_history" />

    <!-- Show Mute Button -->
    <Button
        android:id="@+id/btnMostrarVentana"
        android:layout_width="44dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/idTZNext"
        android:layout_marginTop="0dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="0dp"
        android:text="@string/mute_button" />

    <!-- LinearLayout for the 3 buttons -->
    <LinearLayout
        android:id="@+id/buttonsListLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/showListButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:visibility="gone">

        <!-- Select All List Button -->
        <Button
            android:id="@+id/selectAllListButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seleccionar_todas" />

        <!-- Close List Button -->
        <Button
            android:id="@+id/closeListButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/close_list" />

        <!-- Clear List Button -->
        <Button
            android:id="@+id/clearListButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/borrar_lista" />
    </LinearLayout>

    <!-- ListView -->
    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonsListLayout"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        android:divider="@color/mode_secondary"
        android:dividerHeight="1sp"
        android:choiceMode="multipleChoice"
        android:scrollbarThumbVertical="@drawable/scrollbar_thumb"
        android:scrollbars="vertical"
        android:fadeScrollbars="false"/>

</RelativeLayout>